output_data/action-remaker/JS/failed/ripple_64871274235/out/log.txt
##[group]Operating System
Ubuntu
22.04
LTS
##[endgroup]
##[group]Run pnpm/action-setup@v4
##[endgroup]
::group::Running self-installer...
Progress: resolved 1, reused 0, downloaded 0, added 0
Packages: +1
+
Progress: resolved 1, reused 0, downloaded 1, added 1, done

dependencies:
+ pnpm 10.18.2 (10.33.3 is available)

Done in 1.1s
::endgroup::
Installation Completed!
##[group]Run actions/setup-node@v4
##[endgroup]
::debug::isExplicit: 
::debug::explicit? false
::debug::isExplicit: 16.20.2
::debug::explicit? true
::debug::isExplicit: 18.19.1
::debug::explicit? true
::debug::isExplicit: 20.11.1
::debug::explicit? true
::debug::evaluating 3 versions
::debug::matched: 20.11.1
::debug::checking cache: /opt/hostedtoolcache/node/20.11.1/x64
::debug::Found tool in cache node 20.11.1 x64
Found in cache @ /opt/hostedtoolcache/node/20.11.1/x64
::group::Environment details
node: v20.11.1
npm: 10.2.4
yarn: 1.22.21
::endgroup::
##[add-matcher]/home/github/64871274235/actions/actions-setup-node@v4/.github/tsc.json
##[add-matcher]/home/github/64871274235/actions/actions-setup-node@v4/.github/eslint-stylish.json
##[add-matcher]/home/github/64871274235/actions/actions-setup-node@v4/.github/eslint-compact.json
##[group]Run pnpm install --prod false --frozen-lockfile
##[endgroup]
Scope: all 25 workspace projects
Lockfile is up to date, resolution step is skipped
Progress: resolved 1, reused 0, downloaded 0, added 0
Packages: +974
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
Progress: resolved 974, reused 0, downloaded 0, added 0
Progress: resolved 974, reused 0, downloaded 42, added 24
Progress: resolved 974, reused 0, downloaded 179, added 46
Progress: resolved 974, reused 0, downloaded 305, added 62
Progress: resolved 974, reused 0, downloaded 422, added 78
Progress: resolved 974, reused 0, downloaded 565, added 105
Progress: resolved 974, reused 0, downloaded 667, added 121
Progress: resolved 974, reused 0, downloaded 772, added 139
Progress: resolved 974, reused 0, downloaded 958, added 176
Progress: resolved 974, reused 0, downloaded 970, added 620
Progress: resolved 974, reused 0, downloaded 970, added 968
Progress: resolved 974, reused 0, downloaded 974, added 974, done
 WARN  Failed to create bin at /home/github/build/Ripple-TS/ripple/packages/create-ripple/node_modules/.bin/cli. ENOENT: no such file or directory, open '/home/github/build/Ripple-TS/ripple/packages/cli/dist/index.js'

dependencies:
+ @types/eslint 9.6.1

devDependencies:
+ @changesets/changelog-github 0.5.2
+ @changesets/cli 2.29.8
+ @ripple-ts/eslint-plugin 0.2.215 <- packages/eslint-plugin
+ @ripple-ts/prettier-plugin 0.2.215 <- packages/prettier-plugin
+ @ripple-ts/vite-plugin 0.2.215 <- packages/vite-plugin
+ eslint 9.37.0
+ jsdom 26.1.0
+ linkedom 0.18.12
+ prettier 3.8.1
+ rulesync 7.3.0
+ source-map 0.7.6
+ type-fest 5.1.0
+ typescript 5.9.2
+ vitest 3.2.4
+ wait-on 9.0.3

╭ Warning ─────────────────────────────────────────────────────────────────────╮
│                                                                              │
│   Ignored build scripts: @tailwindcss/oxide, @vscode/vsce-sign, bun,         │
│   esbuild, keytar, tldjs, tree-sitter-cli.                                   │
│   Run "pnpm approve-builds" to pick which dependencies should be allowed     │
│   to run scripts.                                                            │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯

grammars/tree-sitter install$ node-gyp-build
grammars/tree-sitter install: gyp info it worked if it ends with ok
grammars/tree-sitter install: gyp info using node-gyp@10.3.1
grammars/tree-sitter install: gyp info using node@20.11.1 | linux | x64
grammars/tree-sitter install: gyp info find Python using Python version 3.10.12 found at "/usr/bin/python3"
grammars/tree-sitter install: gyp http GET https://nodejs.org/download/release/v20.11.1/node-v20.11.1-headers.tar.gz
grammars/tree-sitter install: gyp http 200 https://nodejs.org/download/release/v20.11.1/node-v20.11.1-headers.tar.gz
grammars/tree-sitter install: gyp http GET https://nodejs.org/download/release/v20.11.1/SHASUMS256.txt
grammars/tree-sitter install: gyp http 200 https://nodejs.org/download/release/v20.11.1/SHASUMS256.txt
grammars/tree-sitter install: gyp info spawn /usr/bin/python3
grammars/tree-sitter install: gyp info spawn args [
grammars/tree-sitter install: gyp info spawn args '/home/github/build/Ripple-TS/ripple/node_modules/.pnpm/node-gyp@10.3.1/node_modules/node-gyp/gyp/gyp_main.py',
grammars/tree-sitter install: gyp info spawn args 'binding.gyp',
grammars/tree-sitter install: gyp info spawn args '-f',
grammars/tree-sitter install: gyp info spawn args 'make',
grammars/tree-sitter install: gyp info spawn args '-I',
grammars/tree-sitter install: gyp info spawn args '/home/github/build/Ripple-TS/ripple/grammars/tree-sitter/build/config.gypi',
grammars/tree-sitter install: gyp info spawn args '-I',
grammars/tree-sitter install: gyp info spawn args '/home/github/build/Ripple-TS/ripple/node_modules/.pnpm/node-gyp@10.3.1/node_modules/node-gyp/addon.gypi',
grammars/tree-sitter install: gyp info spawn args '-I',
grammars/tree-sitter install: gyp info spawn args '/home/github/.cache/node-gyp/20.11.1/include/node/common.gypi',
grammars/tree-sitter install: gyp info spawn args '-Dlibrary=shared_library',
grammars/tree-sitter install: gyp info spawn args '-Dvisibility=default',
grammars/tree-sitter install: gyp info spawn args '-Dnode_root_dir=/home/github/.cache/node-gyp/20.11.1',
grammars/tree-sitter install: gyp info spawn args '-Dnode_gyp_dir=/home/github/build/Ripple-TS/ripple/node_modules/.pnpm/node-gyp@10.3.1/node_modules/node-gyp',
grammars/tree-sitter install: gyp info spawn args '-Dnode_lib_file=/home/github/.cache/node-gyp/20.11.1/<(target_arch)/node.lib',
grammars/tree-sitter install: gyp info spawn args '-Dmodule_root_dir=/home/github/build/Ripple-TS/ripple/grammars/tree-sitter',
grammars/tree-sitter install: gyp info spawn args '-Dnode_engine=v8',
grammars/tree-sitter install: gyp info spawn args '--depth=.',
grammars/tree-sitter install: gyp info spawn args '--no-parallel',
grammars/tree-sitter install: gyp info spawn args '--generator-output',
grammars/tree-sitter install: gyp info spawn args 'build',
grammars/tree-sitter install: gyp info spawn args '-Goutput_dir=.'
grammars/tree-sitter install: gyp info spawn args ]
grammars/tree-sitter install: gyp info spawn make
grammars/tree-sitter install: gyp info spawn args [ 'BUILDTYPE=Release', '-C', 'build' ]
grammars/tree-sitter install: make: Entering directory '/home/github/build/Ripple-TS/ripple/grammars/tree-sitter/build'
grammars/tree-sitter install:   CXX(target) Release/obj.target/tree_sitter_ripple_binding/bindings/node/binding.o
grammars/tree-sitter install:   CC(target) Release/obj.target/tree_sitter_ripple_binding/src/parser.o
grammars/tree-sitter install:   CC(target) Release/obj.target/tree_sitter_ripple_binding/src/scanner.o
grammars/tree-sitter install:   SOLINK_MODULE(target) Release/obj.target/tree_sitter_ripple_binding.node
grammars/tree-sitter install:   COPY Release/tree_sitter_ripple_binding.node
grammars/tree-sitter install: make: Leaving directory '/home/github/build/Ripple-TS/ripple/grammars/tree-sitter/build'
grammars/tree-sitter install: gyp info ok 
grammars/tree-sitter install: Done
 WARN  Failed to create bin at /home/github/build/Ripple-TS/ripple/packages/create-ripple/node_modules/.bin/cli. ENOENT: no such file or directory, open '/home/github/build/Ripple-TS/ripple/packages/create-ripple/node_modules/@ripple-ts/cli/dist/index.js'
. prepare$ rulesync generate || true
. prepare: [info] [rulesync] ✓ All files are up to date (rules)
. prepare: Done
Done in 24.2s using pnpm v10.18.2
##[group]Run pnpm build
##[endgroup]

> @ripple-ts/cli@0.2.215 build /home/github/build/Ripple-TS/ripple/packages/cli
> tsdown

file:///home/github/build/Ripple-TS/ripple/node_modules/.pnpm/rolldown@1.0.0-rc.5/node_modules/rolldown/dist/shared/rolldown-build-CZ74hiRH.mjs:9
import { formatWithOptions, styleText } from "node:util";
                            ^^^^^^^^^
SyntaxError: The requested module 'node:util' does not provide an export named 'styleText'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:132:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:214:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:329:24)
    at async loadESM (node:internal/process/esm_loader:28:7)
    at async handleMainPromise (node:internal/modules/run_main:113:12)

Node.js v20.11.1
 ELIFECYCLE  Command failed with exit code 1.

##[error]Process completed with exit code 1.
